--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -276,8 +276,7 @@
                                 Grid.Column="0" Grid.Row="0"/>
                             <TextBox Grid.Column="1" Grid.Row="0">
                                 <TextBox.Text>
-                                    <Binding Path="CalculatorAge" UpdateSourceTrigger="PropertyChanged"
-                                             Mode="OneWayToSource">
+                                    <Binding Path="CalculatorAge" UpdateSourceTrigger="PropertyChanged">
                                         <Binding.ValidationRules>
                                             <rules:IntValidationRule/>
                                         </Binding.ValidationRules>
@@ -288,8 +287,7 @@
                                 Grid.Column="0" Grid.Row="1"/>
                             <TextBox Grid.Column="1" Grid.Row="1">
                                 <TextBox.Text>
-                                    <Binding Path="CalculatorHeight" UpdateSourceTrigger="PropertyChanged"
-                                             Mode="OneWayToSource">
+                                    <Binding Path="CalculatorHeight" UpdateSourceTrigger="PropertyChanged">
                                         <Binding.ValidationRules>
                                             <rules:FloatValidationRule/>
                                         </Binding.ValidationRules>
@@ -300,8 +298,7 @@
                                 Grid.Column="0" Grid.Row="2"/>
                             <TextBox Grid.Column="1" Grid.Row="2">
                                 <TextBox.Text>
-                                    <Binding Path="CalculatorWeight" UpdateSourceTrigger="PropertyChanged"
-                                             Mode="OneWayToSource">
+                                    <Binding Path="CalculatorWeight" UpdateSourceTrigger="PropertyChanged">
                                         <Binding.ValidationRules>
                                             <rules:FloatValidationRule/>
                                         </Binding.ValidationRules>
@@ -317,8 +314,10 @@
                             <ComboBox Grid.Column="1" Grid.Row="4"
                                       ItemsSource="{Binding Source={be:EnumBindingSource {x:Type es:PhysicalActivity}}}"/>
                             <Button Content="Calculate"
+                                    Command="{Binding CalculateIntakeCommand}"
                                     Grid.Column="0" Grid.Row="5"/>
                             <Button Content="Cancel"
+                                    Command="{Binding ClearCalculateFormCommand}"
                                     Grid.Column="1" Grid.Row="5"/>
                         </Grid>
                     </GroupBox>
