--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -251,7 +251,7 @@
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="250"/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="250"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
