--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -53,10 +53,10 @@
                 <TextBlock Text="value/value" FontSize="14"/>
             </StatusBarItem>
         </StatusBar>
-        
+
         <TabControl DockPanel.Dock="Top" SelectedIndex="3">
             <TabItem  Header="Today">
-                
+
             </TabItem>
             <TabItem  Header="Dishes">
                 <Grid>
@@ -242,7 +242,7 @@
                                 <DataGridTextColumn Header="Carbohydrates" Binding="{Binding Carbohydrates}"/>
                                 <DataGridTextColumn Header="weight in grams" Binding="{Binding WeightGrams}"/>
                             </DataGrid.Columns>
-                            
+
                         </DataGrid>
                     </GroupBox>
                 </Grid>
@@ -364,9 +364,45 @@
                                     Width="80"/>
                         </Grid>
                     </GroupBox>
+                    <GroupBox Header="Your Daily Intake"
+                              Grid.Column="0" Grid.Row="1"
+                              Grid.RowSpan="2">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="Calories:"
+                                       Grid.Column="0" Grid.Row="0"/>
+                            <TextBlock Grid.Column="1" Grid.Row="0"
+                                Text="{Binding CurrentDailyIntake.Calories,
+                                UpdateSourceTrigger=PropertyChanged}"/>
+                            <TextBlock Text="Proteins:"
+                                       Grid.Column="0" Grid.Row="1"/>
+                            <TextBlock Grid.Column="1" Grid.Row="1"
+                                Text="{Binding CurrentDailyIntake.Proteins,
+                                UpdateSourceTrigger=PropertyChanged}"/>
+                            <TextBlock Text="Fats:"
+                                       Grid.Column="0" Grid.Row="2"/>
+                            <TextBlock Grid.Column="1" Grid.Row="2"
+                                Text="{Binding CurrentDailyIntake.Fats,
+                                UpdateSourceTrigger=PropertyChanged}"/>
+                            <TextBlock Text="Carbohydrates:"
+                                       Grid.Column="0" Grid.Row="3"/>
+                            <TextBlock Grid.Column="1" Grid.Row="3"
+                                Text="{Binding CurrentDailyIntake.Carbohydrates,
+                                UpdateSourceTrigger=PropertyChanged}"/>
+                        </Grid>
+                    </GroupBox>
                 </Grid>
             </TabItem>
         </TabControl>
-
     </DockPanel>
 </Window>
