--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -366,9 +366,10 @@
                     </GroupBox>
                     <GroupBox Header="Your Daily Intake"
                               Grid.Column="0" Grid.Row="1"
-                              Grid.RowSpan="2">
+                              Grid.RowSpan="2" Grid.ColumnSpan="2">
                         <Grid>
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
@@ -377,26 +378,34 @@
                                 <RowDefinition Height="auto"/>
                                 <RowDefinition Height="auto"/>
                                 <RowDefinition Height="auto"/>
+                                <RowDefinition Height="auto"/>
                                 <RowDefinition />
                             </Grid.RowDefinitions>
+                            <TextBlock Text="Nutrients:"
+                                       Grid.Column="0" Grid.Row="0"
+                                       Margin="3, 0"/>
+                            <TextBlock Text="You Got Today:"
+                                       Grid.Column="1" Grid.Row="0"/>
+                            <TextBlock Text="Your Goal:"
+                                       Grid.Column="2" Grid.Row="0"/>
                             <TextBlock Text="Calories:"
-                                       Grid.Column="0" Grid.Row="0"/>
-                            <TextBlock Grid.Column="1" Grid.Row="0"
+                                       Grid.Column="0" Grid.Row="1"/>
+                            <TextBlock Grid.Column="2" Grid.Row="1"
                                 Text="{Binding CurrentDailyIntake.Calories,
                                 UpdateSourceTrigger=PropertyChanged}"/>
                             <TextBlock Text="Proteins:"
-                                       Grid.Column="0" Grid.Row="1"/>
-                            <TextBlock Grid.Column="1" Grid.Row="1"
+                                       Grid.Column="0" Grid.Row="2"/>
+                            <TextBlock Grid.Column="2" Grid.Row="2"
                                 Text="{Binding CurrentDailyIntake.Proteins,
                                 UpdateSourceTrigger=PropertyChanged}"/>
                             <TextBlock Text="Fats:"
-                                       Grid.Column="0" Grid.Row="2"/>
-                            <TextBlock Grid.Column="1" Grid.Row="2"
+                                       Grid.Column="0" Grid.Row="3"/>
+                            <TextBlock Grid.Column="2" Grid.Row="3"
                                 Text="{Binding CurrentDailyIntake.Fats,
                                 UpdateSourceTrigger=PropertyChanged}"/>
                             <TextBlock Text="Carbohydrates:"
-                                       Grid.Column="0" Grid.Row="3"/>
-                            <TextBlock Grid.Column="1" Grid.Row="3"
+                                       Grid.Column="0" Grid.Row="4"/>
+                            <TextBlock Grid.Column="2" Grid.Row="4"
                                 Text="{Binding CurrentDailyIntake.Carbohydrates,
                                 UpdateSourceTrigger=PropertyChanged}"/>
                         </Grid>
