--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -124,15 +124,64 @@
                     </GroupBox>
                     <GroupBox Header="Create Meal"
                               Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
-                        <Grid>
+                        <Grid x:Name="CreateMeal">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
+                                <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <ListBox ItemsSource="{Binding SelectedDishes, 
+                            <Grid x:Name="SelectedDishesList"
+                                Grid.Column="0" Grid.Row="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition Height="auto"/>
+                                </Grid.RowDefinitions>
+                                <ListBox ItemsSource="{Binding SelectedDishes, 
                                     UpdateSourceTrigger=PropertyChanged}"
                                  DisplayMemberPath="Name">
-                            </ListBox>
+                                </ListBox>
+                                <Button Content="Clear" 
+                                        Grid.Row="1"
+                                        Command="{Binding ClearSelectedDishesCommand}"/>
+                            </Grid>
+                            <Grid 
+                                Grid.Column="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="Meals Nutrients:"
+                                    Grid.Column="0" Grid.Row="0"
+                                           Grid.ColumnSpan="2"/>
+                                <TextBlock Text="Calories:"
+                                    Grid.Column="0" Grid.Row="1"/>
+                                <TextBlock Text="{Binding Meal.Calories}"
+                                           Grid.Column="1" Grid.Row="1"/>
+                                <TextBlock Text="Proteins:"
+                                    Grid.Column="0" Grid.Row="2"/>
+                                <TextBlock Text="{Binding Meal.Proteins}"
+                                           Grid.Column="1" Grid.Row="2"/>
+                                <TextBlock Text="Fats:"
+                                    Grid.Column="0" Grid.Row="3"/>
+                                <TextBlock Text="{Binding Meal.Fats}"
+                                           Grid.Column="1" Grid.Row="3"/>
+                                <TextBlock Text="Carbohydrates:"
+                                    Grid.Column="0" Grid.Row="4"/>
+                                <TextBlock Text="{Binding Meal.Carbohydrates}"
+                                           Grid.Column="1" Grid.Row="4"/>
+                                <TextBlock Text="Weight:"
+                                    Grid.Column="0" Grid.Row="5"/>
+                                <TextBlock Text="{Binding Meal.WeightGrams}"
+                                           Grid.Column="1" Grid.Row="5"/>
+                            </Grid>
                         </Grid>
                     </GroupBox>
                 </Grid>
