--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -246,6 +246,22 @@
                                        Grid.Column="1" Grid.Row="3"/>
                             <TextBlock Text="{Binding TodayWeight}"
                                        Grid.Column="1" Grid.Row="4"/>
+                            <ProgressBar Grid.Column="2" Grid.Row="0"
+                                         Minimum="0" Maximum="{Binding CurrentDailyIntake.Calories}" 
+                                         Value="{Binding TodayCalories}"
+                                         Margin="0, 3"/>
+                            <ProgressBar Grid.Column="2" Grid.Row="1"
+                                         Minimum="0" Maximum="{Binding CurrentDailyIntake.Proteins}" 
+                                         Value="{Binding TodayProteins}"
+                                         Margin="0, 3"/>
+                            <ProgressBar Grid.Column="2" Grid.Row="2"
+                                         Minimum="0" Maximum="{Binding CurrentDailyIntake.Fats}" 
+                                         Value="{Binding TodayFats}"
+                                         Margin="0, 3"/>
+                            <ProgressBar Grid.Column="2" Grid.Row="3"
+                                         Minimum="0" Maximum="{Binding CurrentDailyIntake.Carbohydrates}" 
+                                         Value="{Binding TodayCarbohydrates}"
+                                         Margin="0, 3"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
